<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/help_keep_your_county_clean"
        android:textAlignment="center"
        android:textColor="#1c6107"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/what_we_do"
            android:textColor="#f4f4f7"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/garbage_collection"
            android:textColor="#ffffff"
            android:textStyle="italic" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/waste_disposal"
            android:textColor="#ffffff"
            android:textStyle="italic" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/cleaning_public_resources"
            android:textColor="#ffffff"
            android:textStyle="italic" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/monitoring_cleanliness_in_the_county"
            android:textColor="#ffffff"
            android:textStyle="italic" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/private_cleaning_tenders"
            android:textColor="#ffffff"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_proceed"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/app_icon_shapes"
            android:padding="10dp"
            android:text="proceed"
            android:textColor="#ffffff"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>